[package]
authors = ["Dylan Wishner <dylanwishner@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "embedded"]
description = "A CLI utility to calculate timer register values for STM32 microcontrollers."
edition = "2018"
keywords = ["arduino", "arm", "cli", "cortex-m", "stm32", "timer"]

license = "MIT"
name = "aevum"
repository = "https://github.com/dylanwishner/aevum"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
crossterm = "0.21"